solid-state.html

--- a/solid-state.html
+++ b/solid-state.html
@@ -154,119 +154,119 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理学【胡安 章维益】.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理学【胡安 章维益】.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《固体物理导论》胡安 章维益</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典固体物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理学[黄昆]教材.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理学[黄昆]教材.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《固体物理学》黄昆</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典固体物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理学习题指导.刘友之.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理学习题指导.刘友之.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《固体物理学习习题》刘友之</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典固体物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理学及习题解答.徐至中.1989.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理学及习题解答.徐至中.1989.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《固体物理》徐至终</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典固体物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/【固体物理教程】·王矜奉.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="【固体物理教程】·王矜奉.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《固体物理教程》王矜奉</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典固体物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理-韦丹.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理-韦丹.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《固体物理》韦丹</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典固体物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理-彭俊虎.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理-彭俊虎.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《固体物理》彭俊虎</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典固体物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理基础-阎守胜.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理基础-阎守胜.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《固体物理基础》阎守胜</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典固体物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理（胡安）课后答案.PDF" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理（胡安）课后答案.PDF" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《固体物理导论》胡安 课后习题答案</span>
                             </a>
                             <small class="text-muted d-block mt-1">习题答案</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理学学习参考书.陈金富.高教版.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理学学习参考书.陈金富.高教版.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>固体物理学学习参考书</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典固体物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理学问题和习题-黄波.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理学问题和习题-黄波.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>固体物理学问题和习题-黄波</span>
                             </a>
                             <small class="text-muted d-block mt-1">习题解答</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/固体物理笔记.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="固体物理笔记.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>蒋泊远笔记</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典固体物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/中国科技大学研究生课程《固体物理》讲义.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="中国科技大学研究生课程《固体物理》讲义.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>中国科技大学研究生课程《固体物理》讲义</span>
                             </a>
                             <small class="text-muted d-block mt-1">中国科技大学研究生课程《固体物理》讲义</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/北京大学固体物理课件.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="北京大学固体物理课件.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>北京大学固体物理课件</span>
                             </a>
                             <small class="text-muted d-block mt-1">高校ppt</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/基尔泰固体物理导论-教材.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="基尔泰固体物理导论-教材.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>基尔泰固体物理导论-教材</span>
                             </a>
                             <small class="text-muted d-block mt-1">外国教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/有机固体物理.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="有机固体物理.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>有机固体物理</span>
                             </a>
                             <small class="text-muted d-block mt-1">物理化学交叉</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/solid-state/计算固体物理学【邹宪武,金准智】.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="计算固体物理学【邹宪武,金准智】.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>计算固体物理学</span>
                             </a>
